# ePenguin-Igloo

./: .dir-locals.el  .gdb_history  .gitignore  .gitmodules  Cargo.toml  D21ExampleMakefile  GPATH  GRTAGS  Makefile  README.md  README.md.temp  license.txt  notes.md
d21test/.igloo/: Makefile  d21test.elf  d21test.hex  d21test.lss  d21test.map  output.txt
d21test/.igloo/ESF/mcu/src/: startup_samd21j18a.d  system_samd21j18a.d
d21test/.igloo/src/: main.d
d21test/ESF/: ld  mcu
d21test1/.igloo/: testdir.elf  testdir.hex  testdir.lss  testdir.map
d21test1/.igloo/ESF/mcu/src/: system_samd21j18a.d
d21test1/.igloo/src/: main.d
d21test1/src/: main.c
doc/: changelog.md  target_configurations.toml
e54testdir/.igloo/: Makefile  e54testdir.elf  e54testdir.hex  e54testdir.lss  e54testdir.map
e54testdir/.igloo/ESF/mcu/src/: startup_same54.d  system_same54.d
e54testdir/.igloo/src/: main.d
e54testdir/ESF/: cfg  hdi  ld  mcu
e54testdir/src/: main.c
igloo_agent/: Cargo.toml
igloo_agent/src/: lib.rs  main.rs
igloo_base/: Cargo.toml
igloo_base/src/: lib.rs
igloo_cli/: Cargo.toml
igloo_cli/src/: lib.rs
igloo_core/: Cargo.toml
igloo_core/src/: .#igloo_project.rs  .#lib.rs  igloo_action.rs  igloo_cli.rs  igloo_env.rs  igloo_manifest.rs  igloo_project.rs  igloo_target.rs  igloo_util.rs  lib.rs
igloo_make/: Cargo.toml
igloo_make/src/: lib.rs
igloo_manifest/: Cargo.toml
igloo_manifest/src/: .#lib.rs  lib.rs
igloo_util/: Cargo.toml
igloo_util/src/: lib.rs
projecttest/igloo/: igloo.toml
projecttest/igloo/targets/samd21j18a/: Makefile
sampleprj/ESF/: cfg  common
sampleprj/inc/: igloo.h
sampleprj/src/: main.c
src/: .#igloo.rs  .#igloo_prj.rs  .#main.rs  \  igloo.rs  igloo_action.rs  igloo_manifest.rs  igloo_prj.rs  main.rs  util.rs
test/: igloo.toml  target.toml
testaz/ESF/: cfg  common  ld  mcu
testaz/src/: main.c
testdir/.igloo/: .gdb_history  Makefile  testdir.elf  testdir.hex  testdir.lss  testdir.map
testdir/.igloo/ESF/mcu/src/: startup_samd21.d  startup_samd21j18a.d  system_samd21.d
testdir/.igloo/src/: main.d
testdir/ESF/: cfg  common  hdi  inc  ld  mcu  src
testdir/inc/: igloo.h
testdir/src/: main.c
testing_rust_again/: Cargo.toml  GPATH
testing_rust_again/src/: main.rs
