[package]
name = "igloo"
version = "0.1.1"
authors = ["Penguin <...>"]
edition = "2021"
repository = "https://github.com/Embedded-Penguin/ePenguin-igloo/"
readme = "README.md"
description = "Igloo is a package/project manager. It is used for bare metal embedded systems. It is in its early stages of development. The goal of this project is to reduce the pain of writing embedded code by bridging the gap between many different manufacturers. It is can be thought of as glue for many of the fragmented pieces in the embedded world. This is also a learning project for me. Not all of this code will be the most efficient. I wanted to use a problem I saw as an opportunity to learn rust. Advice is welcome."
license="GPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igloo_core = { path = "./igloo_core" }
igloo_agent = { path = "./igloo_agent" }
igloo_util = { path = "./igloo_util" }


[workspace]
members = ["igloo_core", "igloo_agent", "igloo_util"]
