[package]
name = "igloo"
version = "1.0.1"
authors = ["Penguin <...>"]
edition = "2021"
repository = "https://github.com/Embedded-Penguin/ePenguin-igloo/"
readme = "README.md"
description = "This project is abandoned and will not work. If you'd like the name, please email help@crates.io. I consent to the transfer to the first person who asks for it."
license="GPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = ["igloo_core", "igloo_agent", "igloo_util"]
