[package]
name = "igloo_core"
version = "0.1.0"
authors = ["Penguin <penguin@epenguin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
config = "0.10"
igloo_cli = { path = "../igloo_cli" }
igloo_manifest = { path = "../igloo_manifest" }
igloo_make = { path = "../igloo_make" }
igloo_base = { path = "../igloo_base" }
zmq = "0.9"