[package]
name = "igloo_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
config = "0.11"
directories = "3.0.1"
toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"]}
igloo_util = { path="../igloo_util" }