[package]
name = "igloo_manifest"
version = "0.1.0"
authors = ["Penguin <penguin@epenguin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igloo_base = { path = "../igloo_base" }
config = "0.10"
sscanf = "0.1.2"
